syntax = "proto3";

package book_store.admin_service;

import "admin_messages.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Surya-7890/book_store/proto/gen";

service AdminAuth {
    rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse) {
        option(google.api.http) = {
            post: "/v1/admin/login";
            body: "*";
        };
    }

    rpc AdminCreate(AdminCreateRequest) returns (AdminCreateResponse) {
        option(google.api.http) = {
            post: "/v1/admin/create";
            body: "*";
        };
    }

    rpc VerifyAdminCredentials(VerifyAdminRequest) returns (VerifyAdminResponse);
}