syntax = "proto3";

package book_store.admin_service;

option go_package = "github.com/Surya-7890/book_store/proto/gen";

message AdminLoginRequest {
    string username = 1;
    string password = 2;
}
message AdminLoginResponse {
    string status = 1;
}
message AdminCreateRequest {
    string username = 1;
    string password = 2;
}
message AdminCreateResponse {
    string status = 1;
}

message NewBookRequest {}
message NewBookResponse {}
message UpdateBookRequest {}
message UpdateBookResponse {}
message DeleteBookRequest {
    string id = 1;
}
message DeleteBookResponse {}

message NewCategoryRequest {}
message NewCategoryResponse {}
message UpdateCategoryRequest {}
message UpdateCategoryResponse {}
message DeleteCategoryRequest {
    string id = 1;
}
message DeleteCategoryResponse {}

message SalesReportRequest {}
message SalesReportResponse {}